--- a/ConstellationEngine.vcxproj
+++ b/ConstellationEngine.vcxproj
@@ -164,7 +164,7 @@
   <ItemGroup>
     <ClCompile Include="contrib\glad\src\glad.cpp" />
     <ClCompile Include="src\core\graphics\graphics.cpp" />
-    <ClCompile Include="src\utils\shader\shader.cpp" />
+    <ClCompile Include="src\core\input\input.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\core\window\window.cpp" />
     <ClCompile Include="src\utils\utils.cpp" />
@@ -180,7 +180,7 @@
   <ItemGroup>
     <ClInclude Include="src\core\camera\camera.hpp" />
     <ClInclude Include="src\core\graphics\graphics.hpp" />
-    <ClInclude Include="src\utils\shader\shader.hpp" />
+    <ClInclude Include="src\core\input\input.hpp" />
     <ClInclude Include="src\main.hpp" />
     <ClInclude Include="src\core\window\window.hpp" />
     <ClInclude Include="src\utils\utils.hpp" />
