--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+main.out
+
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
