--- a/ConstellationEngine.vcxproj
+++ b/ConstellationEngine.vcxproj
@@ -65,8 +65,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>..\thirdparty\glfw-3.3.6.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\thirdparty\assimp-5.2.4.WIN64;..\thirdparty\glfw-3.3.6.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>assimp-vc143-mt.lib;glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -85,38 +85,48 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>..\thirdparty\glfw-3.3.6.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\thirdparty\assimp-5.2.4.WIN64;..\thirdparty\glfw-3.3.6.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>assimp-vc143-mt.lib;glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="contrib\glad\src\glad.cpp" />
-    <ClCompile Include="src\AI\cubeMonster\cubeMonster.cpp" />
     <ClCompile Include="src\core\graphics\graphics.cpp" />
     <ClCompile Include="src\core\input\input.cpp" />
+    <ClCompile Include="src\core\model\mesh.cpp" />
+    <ClCompile Include="src\core\model\model.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\core\window\window.cpp" />
     <ClCompile Include="src\utils\utils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="assimp-vc143-mt.dll" />
     <None Include="AUTHORS.md" />
     <None Include="CHANGELOG.md" />
+    <None Include="data\models\cube\cube.mtl" />
     <None Include="data\shaders\cube.frag" />
     <None Include="data\shaders\cube.vert" />
     <None Include="LICENSE" />
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\AI\cubeMonster\cubeMonster.hpp" />
     <ClInclude Include="src\core\camera\camera.hpp" />
     <ClInclude Include="src\core\graphics\graphics.hpp" />
     <ClInclude Include="src\core\input\input.hpp" />
+    <ClInclude Include="src\core\model\mesh.hpp" />
+    <ClInclude Include="src\core\model\model.hpp" />
     <ClInclude Include="src\main.hpp" />
     <ClInclude Include="src\core\window\window.hpp" />
     <ClInclude Include="src\utils\utils.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="data\models\cube\CubeDiffuse.png" />
     <Image Include="data\textures\PixelLogo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="data\models\cube\cube.obj">
+      <FileType>Document</FileType>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
