--- a/ConstellationEngine.vcxproj
+++ b/ConstellationEngine.vcxproj
@@ -91,6 +91,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="contrib\glad\src\glad.cpp" />
+    <ClCompile Include="src\AI\cubeMonster\cubeMonster.cpp" />
     <ClCompile Include="src\core\graphics\graphics.cpp" />
     <ClCompile Include="src\core\input\input.cpp" />
     <ClCompile Include="src\core\model\mesh.cpp" />
@@ -110,6 +111,7 @@
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\AI\cubeMonster\cubeMonster.hpp" />
     <ClInclude Include="src\core\camera\camera.hpp" />
     <ClInclude Include="src\core\graphics\graphics.hpp" />
     <ClInclude Include="src\core\input\input.hpp" />
